# vanguard-cx-project

./: .gitignore  README.md  pyproject.toml  requirements.txt  vanguard_tableau.twb
.virtual_documents/notebooks/constanza/: Experiment_evaluation.ipynb  Hypothesis.ipynb  Untitled1.ipynb
data/clean/: clean_df_final_web_data_pt_1_2.ipynb  combined_cleaned_data.csv  control_variation_df.csv  final_clean_client_df.csv  final_demo_df_clean.csv  final_experiment_clients_df.csv  kpi_df_clean.csv  merged_final_demo_final_experiment_clients_df.csv  test_variation_df.csv  test_variation_df_clean.csv  unknown_variation_df.csv  unknown_variation_df_clean.csv  variation_control_df.csv  variation_test_df.csv  variation_unknown_df.csv
data/raw/: clean_df_final_web_data_pt_1_2.ipynb  raw-data.ipynb  raw_data_errors_per_client.ipynb
notebooks/: results.ipynb
notebooks/bru/: Untitled.ipynb  brus-notebook.ipynb  clean_data_conclusions.ipynb  divide_dfs.ipynb  final_demo_df_clean.csv  kpi_calculations.ipynb  my_utils.py  variation_ab_test.ipynb
notebooks/constanza/: Experiment_evaluation.ipynb  Hypothesis.ipynb  Untitled.ipynb  clean_df_final_web_data_pt_1_2.ipynb  constanzas-notebook.ipynb  load_data_constanza.ipynb  raw-data.ipynb  raw_data_errors_per_client.ipynb
utils/: functions.py  kpi_functions.py  utils.py
